--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
-scholar_userid: XLahYIYAAAAJ # your Google Scholar ID
+scholar_userid: t9Dfj9EAAAAJ # your Google Scholar ID
 scopus_id: # your profile on Scopus
 semanticscholar_id: 2184031883 # your Semantic Scholar ID
 spotify_id: # your spotify id
